Bug 250602 - BCC addresses functionality not implemented
Summary: BCC addresses functionality not implemented
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-08 21:18 UTC by Sabine Faure
Modified: 2010-12-20 20:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-09-08 21:18:02 UTC
Version:           unspecified (using Devel) 
OS:                Linux

'BCC addresses' functionality from 'Advanced' tab (Edit Identity dialogue) does not seem to be implemented.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Open the 'Actions' tab
- Click on 'Identities'
- Select an already existing identity (ex: Recipient A)
- Click on 'Modify' button
- Click on the 'Advanced' tab
- Enter an email address (Recipient B) in the 'BCC addresses' line edit
- Click on 'Ok' twice and close the 'Actions' tab
- Click on 'Write new Email'
- In the composer, select the identity you've modified as the sender (Recipient A)
- Enter a subject, a few words and a recipient (Recipient C)
- Click on 'Send'
- The email is sent and received properly by Recipient C
- Select it from the recipient's message list and click on 'Reply'
- The message recipient should be Recipient A automatically
- Add a few words and click on 'Send'
- Open the message

Actual Results:  
Recipient A receives the reply but Recipient B never receives a copy of the reply.

Expected Results:  
Recipient B should receive a copy of the reply as his address was entered as a BCC address.

N900, 4:4.5~20100906.1172093-1maemo1.1171830
Comment 1 Tobias Koenig 2010-11-26 13:56:33 UTC
Hej Sabine,

works fine here on desktop with current trunk version.
Can you retest please with current packages?

Ciao,
Tobias
Comment 2 Sabine Faure 2010-11-29 01:14:42 UTC
I retested this on the N900 today using 3 differents email addresses just like in my description above (A: work address, B: personal address and C: Imap testing address on the N900).

I can still reproduce this bug:

When I click on 'Reply' and go to the recipient's tab in the Composer I can see that 'To:' displays address A as it should but underneath the second line edit is empty and instead of displaying 'BBC:' it shows 'To:'.

As a result recipient B never receives a copy of the reply whereas it should so I am reopening this bug.

N900, 4:4.6~20101128.1201814-1maemo1.1200957
Comment 3 Tobias Koenig 2010-12-10 10:59:03 UTC
Hej Sabine,

I guess you mix up BCC and Reply-To here. As the "What's This" information of the 'BCC addresses' fields in the identity dialog says, the BCC address is added automatically to the composer if Recipient A is sending an email. This feature is used to archive all mails Recipient A sends to a second account. The feature you are referring to is the Reply-To field, which is used by Recipient C's mail client to send back the message to an altenative email address of Recipient A.
Can you confirm that?

Ciao,
Tobias
Comment 4 Sabine Faure 2010-12-15 22:01:33 UTC
Indeed I was not testing this functionality correctly! Thx Tobias ;o)

Here are the correct steps to test it:

- Launch Kmail-mobile
- Open the 'Actions' tab
- Click on 'Identities'
- Select an already existing identity (ex: Recipient A)
- Click on 'Modify' button
- Click on the 'Advanced' tab
- Enter an email address (Recipient B) in the 'BCC addresses' line edit
- Click on 'Ok' twice and close the 'Actions' tab
- Click on 'Write new Email'
- In the composer, select the identity you've modified as the sender (Recipient
A)
- Enter a subject, a few words and a recipient (Recipient C)
- Click on 'Send'
- The email is sent and received properly by Recipient C

However, Recipient B never receives a copy of the email whereas he should so I am reopening this bug.

Note: I retested this on the N900 today using 3 differents email addresses (A: personal address, B: work address and C: Imap testing address on the N900).


N900, 4:4.6~20101215.1206727-1maemo1.1206430
Comment 5 Sabine Faure 2010-12-15 22:08:13 UTC
Also I forgot to mention that if you show the source of the email sent (Action tab - View - Show source) there is no mention of a BCC address in it.

N900, 4:4.6~20101215.1206727-1maemo1.1206430
Comment 6 Tobias Koenig 2010-12-16 11:22:31 UTC
SVN commit 1206971 by tokoe:

Use the identity BCC addresses when composing mails.

Now the BCC addresses are applied initially on the new message
and updated whenever the user changes the identity via the identity combobox
in the composer.

BUG: 250602


 M  +16 -1     composerview.cpp  
 M  +2 -0      composerview.h  
 M  +16 -9     mainview.cpp  
 M  +1 -1      mainview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206971
Comment 7 Tobias Koenig 2010-12-16 11:26:40 UTC
Hej Sabine,

last time I only tested with KMail and not kmail-mobile while under the impression that both use the same code for sending mails. However the code differs, so this last patch should fix it for kmail-mobile as well.
This also brought up another bug with using multiple addresses in the identity's BCC field, which is fixed now as well. So thanks for insisting on the existence of this bug :)

Ciao,
Tobias
Comment 8 Sabine Faure 2010-12-20 20:44:47 UTC
Thx Tobias! ;o)

It is corrected now

Recipient B, now receives a copy of the email as he should so I am closing this bug.

N900, 4:4.6~20101220.1208001-1maemo1.1206430